# market_economy_simulation

./: .gitmodules  Cargo.toml  README.md  animation.json  index.html  install.txt  mesh.json  skeleton.json
blender/: spider_0_1.blend
market_economy_simulation/: Cargo.toml
market_economy_simulation/res/: ant_0_2.blend  ant_0_3.blend  ant_0_4.blend  ant_0_5.blend  ant_0_6_IK.blend  ant_0_7_IK.blend  ant_0_8.blend  ant_0_8.blend1  ant_0_8.dae  ant_0_8.glb  spider_0_1.dae  test.dae  wiggle_tower2.dae  wiggle_tower2.glb
market_economy_simulation/src/: animated_object_storage.rs  ant_storage.rs  create_entities.rs  debug_overlay.rs  default_window.rs  indexed_vector.rs  lib.rs  performance_monitor.rs  point_light_storage.rs  ray_triangle_intersection.rs  renderer.rs  selector.rs  settings.rs  terrain_storage.rs
market_economy_simulation/src/agents_shader/: agents_shader_draw.rs  mesh.rs  mod.rs
market_economy_simulation/src/animated_object/: animated_object_data.rs  animated_object_renderer.rs  gltf_importer.rs  mod.rs  wgpu_animated_object_renderer.rs
market_economy_simulation/src/ant/: mod.rs
market_economy_simulation/src/base_factory/: base_factory.rs  base_factory_mesh.rs  mod.rs
market_economy_simulation/src/deferred_animation_shader/: animation_uniform.rs  animation_uniform_buffer.rs  deferred_animation_shader_draw.rs  mesh.rs  mod.rs  pipeline.rs  shader.wgsl  vertex.rs
market_economy_simulation/src/deferred_color_shader/: deferred_color_shader.rs  deferred_color_shader_draw.rs  entity_buffer.rs  entity_buffer_slice.rs  g_buffer.rs  instance.rs  instance_buffer.rs  mesh.rs  mod.rs  pipeline.rs  shader.wgsl  vertex.rs  vertex_buffer.rs
market_economy_simulation/src/deferred_heightmap_shader/: deferred_heightmap_shader_draw.rs  instance.rs  mesh.rs  mod.rs  pipeline.rs  shader_heightmap.wgsl  vertex.rs
market_economy_simulation/src/deferred_light_shader/: deferred_light_shader_draw.rs  depth_texture_bind_group_layout.rs  g_buffer_bind_group_layout.rs  instance.rs  instance_buffer.rs  mesh.rs  mod.rs  pipeline.rs  shader.wgsl  shader_ambient_light.wgsl  shader_point_light.wgsl
market_economy_simulation/src/deferred_light_sphere_shader/: deferred_light_sphere_shader_draw.rs  mod.rs  pipeline.rs  shader_point_light_sphere.wgsl
market_economy_simulation/src/deferred_terrain_shader/: deferred_terrain_shader_draw.rs  instance.rs  mesh.rs  mod.rs  pipeline.rs  shader.wgsl  vertex.rs
market_economy_simulation/src/ecs/: entity_iterator.rs  mod.rs  tests.rs
market_economy_simulation/src/ecs2/: components.rs  entity.rs  entity_interface.rs  mod.rs  world.rs
market_economy_simulation/src/fxaa_shader/: mod.rs  pipeline_fxaa.rs  post_processing_texture.rs  (+1 more)
(+74 files in other folders)
