[package]
name = "market_economy_simulation"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/FirePrincess01/market_economy_simulation"
description = "Simulation of agents producing stuff organized by a market "
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "app"
test = false
doc = false 

[dependencies]
# dependencies for wgpu 
cfg-if = "1"
env_logger = "0.11"
winit = "0.30"
pollster = "0.4"
wgpu = "24.0"
instant = "0.1"
cgmath = "0.18"
# wgpu_renderer = { git = "https://github.com/FirePrincess01/wgpu_renderer.git", branch = "main" } 
wgpu_renderer = { path = "../wgpu_renderer" }
# other  
log = "0.4"
bytemuck = { version = "1.12", features = [ "derive" ] }
rusttype = "0.9"
fastrand = "2.0"
gltf = "1.4.1"
noise = "0.9.0"
market_economy_simulation_server = { path = "../market_economy_simulation_server" }
colorous = "1.0.16"


[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
log = "0.4"
console_log = "1.0.0"
wgpu = { version = "24.0", features = [ "webgl" ]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
